--- a/BlazorFullStackCrud/Client/BlazorFullstackCrud.Client.csproj
+++ b/BlazorFullStackCrud/Client/BlazorFullstackCrud.Client.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
+﻿<Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -16,6 +16,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Shared\BlazorFullstackCrud.Shared.csproj" />
+    <!--<ProjectReference Include="..\Client\BlazorFullstackCrud.Client.csproj" />-->
   </ItemGroup>
 
   <ItemGroup>
