--- a/BlazorFullStackCrud/Server/BlazorFullstackCrud.Server.csproj
+++ b/BlazorFullStackCrud/Server/BlazorFullstackCrud.Server.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -13,7 +13,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Client\BlazorFullstackCrud.Client.csproj" />
     <ProjectReference Include="..\Shared\BlazorFullstackCrud.Shared.csproj" />
   </ItemGroup>
 
